--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <nav class="bg-white shadow sticky top-0 z-50">
     <div class="container mx-auto px-4 py-4 flex justify-center space-x-6 text-indigo-800 font-semibold">
+      <a href="#sobre-mi" class="hover:underline">Sobre mí</a>
       <a href="#consultas" class="hover:underline">Consultas</a>
       <a href="#rituales" class="hover:underline">Rituales</a>
       <a href="#testimonios" class="hover:underline">Testimonios</a>
@@ -28,6 +29,16 @@
     </div>
   </nav>
 
-  <!-- El resto del contenido sigue igual... -->
-</body>
-</html>
+  <section id="sobre-mi" class="py-16 px-6 md:px-16 bg-indigo-50">
+    <div class="max-w-5xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-6 text-indigo-700">Sobre mí</h2>
+      <div class="flex flex-col md:flex-row items-center justify-center gap-8">
+        <img src="22c16f98-dd4e-4deb-b762-bcb60c03f0d3.jpg" alt="Luna Tarotista" class="w-full max-w-sm rounded-lg shadow-md">
+        <p class="text-lg leading-relaxed text-left max-w-xl">
+          Soy <strong>Luna</strong>, tarotista profesional especializada en el amor, con más de 20 años de experiencia acompañando a quienes buscan respuestas sinceras y guía emocional. Desde joven descubrí una conexión profunda con la energía de las personas, y a lo largo de los años he canalizado esa intuición en cada consulta. Mi propósito es ayudarte a ver con claridad, tomar decisiones en paz y abrir caminos con sensibilidad y respeto. Trabajo desde la serenidad, con una mirada cercana, directa y sin juicios. Cada lectura es un momento de encuentro con tu verdad interior.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Aquí seguirán las secciones de consultas, rituales, testimonios, contacto... -->
