--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,21 +6,113 @@
   <title>Tarot Luna</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Quicksand&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body class="font-[Quicksand] bg-white text-gray-800">
-  <header class="h-screen bg-cover bg-center text-white flex flex-col justify-center items-center text-center" style="background-image: url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?auto=format&fit=crop&w=1470&q=80');">
+  <header class="h-screen bg-cover bg-center text-white flex flex-col justify-center items-center text-center" style="background-image: url('https://images.unsplash.com/photo-1533616688419-b7a585564566?auto=format&fit=crop&w=1470&q=80');">
     <h1 class="text-6xl md:text-7xl font-bold drop-shadow-xl" style="font-family: 'Playfair Display', serif;">Tarot Luna</h1>
-    <p class="text-2xl md:text-3xl mt-4 bg-white bg-opacity-70 text-gray-800 px-6 py-2 rounded">Descubre respuestas, guía y energía positiva</p>
+    <p class="text-xl md:text-2xl mt-4 bg-white bg-opacity-80 text-gray-900 px-6 py-2 rounded shadow">Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.</p>
     <a href="#contacto" class="mt-6 bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition">Solicita tu consulta</a>
   </header>
+
   <nav class="bg-white shadow sticky top-0 z-50">
     <div class="container mx-auto px-4 py-4 flex justify-center space-x-6 text-indigo-800 font-semibold">
+      <a href="#sobre-mi" class="hover:underline">Sobre mí</a>
       <a href="#consultas" class="hover:underline">Consultas</a>
       <a href="#rituales" class="hover:underline">Rituales</a>
       <a href="#testimonios" class="hover:underline">Testimonios</a>
       <a href="#contacto" class="hover:underline">Contacto</a>
     </div>
   </nav>
-  <!-- Secciones omitidas aquí para brevedad (las incluiré en el paso siguiente) -->
+
+  <section id="sobre-mi" class="py-16 px-6 md:px-16 bg-indigo-50">
+    <div class="max-w-5xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-6 text-indigo-700">Sobre mí</h2>
+      <div class="flex flex-col md:flex-row items-center justify-center gap-8">
+        <img src="22c16f98-dd4e-4deb-b762-bcb60c03f0d3.jpg" alt="Luna Tarotista" class="w-full max-w-sm rounded-lg shadow-md">
+        <p class="text-lg leading-relaxed text-left max-w-xl">
+          Soy <strong>Luna</strong>, tarotista especializada en el amor. Llevo más de 20 años guiando con sensibilidad y claridad a quienes buscan respuestas, paz interior y dirección emocional. Desde pequeña sentí una conexión con las personas, una capacidad de intuir más allá de las palabras. Hoy canalizo esa energía en cada lectura, siempre desde el respeto, la honestidad y la luz.
+          <br><br>
+          Mi misión es ayudarte a verte, a sanar y a recuperar tu poder. Trabajo de manera cercana y sincera. No juzgo. Estoy aquí para escuchar, para ayudarte a soltar lo que ya no sirve y a abrir nuevos caminos con fuerza, verdad y amor.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section id="consultas" class="py-16 px-6 md:px-16">
+    <div class="max-w-5xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-10 text-indigo-700">Consultas de Tarot</h2>
+      <div class="grid md:grid-cols-2 gap-8 text-left">
+        <div class="bg-white p-6 shadow-lg rounded-lg">
+          <h3 class="text-xl font-semibold mb-4">📩 Por escrito (WhatsApp)</h3>
+          <ul class="space-y-2">
+            <li>7 preguntas – <strong>15€</strong></li>
+            <li>15 preguntas – <strong>20€</strong></li>
+            <li>30 preguntas – <strong>35€</strong></li>
+          </ul>
+        </div>
+        <div class="bg-white p-6 shadow-lg rounded-lg">
+          <h3 class="text-xl font-semibold mb-4">📞 Por llamada o videollamada</h3>
+          <ul class="space-y-2">
+            <li>15 minutos – <strong>15€</strong></li>
+            <li>30 minutos – <strong>20€</strong></li>
+            <li>1 hora – <strong>35€</strong></li>
+          </ul>
+        </div>
+      </div>
+      <p class="mt-8 text-lg">💳 Puedes pagar por tarjeta, transferencia, ingreso, Bizum o PayPal.</p>
+    </div>
+  </section>
+
+  <section id="rituales" class="py-16 px-6 md:px-16 bg-gray-50">
+    <div class="max-w-5xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-10 text-indigo-700">Rituales de Amor</h2>
+      <p class="mb-6 text-lg">Cada persona vive el amor de forma distinta. Por eso creo rituales personalizados según tu historia y tus emociones. Trabajo desde la energía limpia, la intención verdadera y el respeto absoluto por tu proceso.</p>
+      <div class="grid md:grid-cols-2 gap-6">
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-xl font-semibold mb-2">💔 Recuperar una relación</h3>
+          <p>Si hubo amor y aún hay conexión, este ritual puede ayudarte a abrir diálogo, sanar heridas y facilitar un reencuentro desde el alma.</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-xl font-semibold mb-2">💖 Atraer un nuevo amor sano</h3>
+          <p>Cuando estás preparada para volver a amar. Este ritual activa tu energía receptiva para atraer relaciones desde el respeto, el deseo y la estabilidad.</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-xl font-semibold mb-2">✂️ Cortar lazos con el pasado</h3>
+          <p>Si sientes que no puedes soltar a alguien o que arrastras un vínculo doloroso, este ritual te ayudará a liberarte con paz y cerrar ciclos.</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-xl font-semibold mb-2">🌹 Amor propio y autoestima</h3>
+          <p>Ideal si has salido de una ruptura o te sientes desconectada de ti misma. Te ayuda a reconectar contigo y cultivar amor propio desde adentro.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="testimonios" class="py-16 px-6 md:px-16">
+    <div class="max-w-4xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-10 text-indigo-700">Testimonios</h2>
+      <blockquote class="italic text-lg mb-6">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”<br><span class="font-semibold">– Marta G. (Madrid)</span></blockquote>
+      <blockquote class="italic text-lg mb-6">“El ritual para soltar a mi ex fue muy sanador. Me sentí acompañada, comprendida y guiada en todo momento.”<br><span class="font-semibold">– Andrea L. (Valencia)</span></blockquote>
+      <blockquote class="italic text-lg mb-6">“Nunca había sentido tanta paz después de una lectura. Fue honesta, cariñosa y certera.”<br><span class="font-semibold">– Carmen R. (Barcelona)</span></blockquote>
+    </div>
+  </section>
+
+  <section id="contacto" class="py-16 px-6 md:px-16 bg-indigo-50">
+    <div class="max-w-4xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-6 text-indigo-700">Contacto</h2>
+      <p class="mb-4 text-lg">📱 WhatsApp: <a href="https://wa.me/34604458992" class="text-indigo-600 font-semibold">604 45 89 92</a></p>
+      <p class="mb-6">Respondo de lunes a sábado. Si no contesto de inmediato, te responderé en el mismo día.</p>
+      <a href="https://wa.me/34604458992" class="bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition hover:bg-indigo-800">Enviar mensaje por WhatsApp</a>
+    </div>
+  </section>
+
+  <footer class="bg-indigo-100 text-center text-sm py-6 text-gray-700">
+    &copy; 2025 Tarot Luna. Todos los derechos reservados.
+  </footer>
 </body>
 </html>
