--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="font-[Quicksand] bg-white text-gray-800">
   <header class="h-screen bg-cover bg-center text-white flex flex-col justify-center items-center text-center" style="background-image: url('https://images.unsplash.com/photo-1533616688419-b7a585564566?auto=format&fit=crop&w=1470&q=80');">
     <h1 class="text-6xl md:text-7xl font-bold drop-shadow-xl" style="font-family: 'Playfair Display', serif;">Tarot Luna</h1>
-    <p class="text-xl md:text-2xl mt-4 bg-white bg-opacity-80 text-gray-900 px-6 py-2 rounded shadow">Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.</p>
+    <p class="text-xl md:text-2xl mt-4 bg-white bg-opacity-80 text-gray-900 px-6 py-2 rounded shadow">Cuando el corazón busca respuestas, el alma sabe dónde mirar. Déjame ser tu guía en este camino de claridad, calma y luz.</p>
     <a href="#contacto" class="mt-6 bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition">Solicita tu consulta</a>
   </header>
 
@@ -35,9 +35,9 @@
       <div class="flex flex-col md:flex-row items-center justify-center gap-8">
         <img src="22c16f98-dd4e-4deb-b762-bcb60c03f0d3.jpg" alt="Luna Tarotista" class="w-full max-w-sm rounded-lg shadow-md">
         <p class="text-lg leading-relaxed text-left max-w-xl">
-          Soy <strong>Luna</strong>, tarotista especializada en el amor. Llevo más de 20 años guiando con sensibilidad y claridad a quienes buscan respuestas, paz interior y dirección emocional. Desde pequeña sentí una conexión con las personas, una capacidad de intuir más allá de las palabras. Hoy canalizo esa energía en cada lectura, siempre desde el respeto, la honestidad y la luz.
+          Soy <strong>Luna</strong>, guía espiritual y tarotista especializada en el amor. Desde hace más de dos décadas acompaño a personas que necesitan comprender su presente y abrazar con confianza su futuro. Mi conexión con la energía y el alma humana comenzó desde niña, cuando descubrí que las cartas hablaban más allá de lo evidente.
           <br><br>
-          Mi misión es ayudarte a verte, a sanar y a recuperar tu poder. Trabajo de manera cercana y sincera. No juzgo. Estoy aquí para escuchar, para ayudarte a soltar lo que ya no sirve y a abrir nuevos caminos con fuerza, verdad y amor.
+          Mi propósito es ayudarte a ver con claridad, a sanar vínculos y a reconectar contigo misma. Mis sesiones no son solo una lectura de tarot, son espacios de escucha profunda, orientación y transformación. Trabajo desde la calma, con empatía, intuición y una gran pasión por ayudarte a que vivas tu historia desde la verdad del corazón.
         </p>
       </div>
     </div>
@@ -71,7 +71,7 @@
   <section id="rituales" class="py-16 px-6 md:px-16 bg-gray-50">
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-4xl font-bold mb-10 text-indigo-700">Rituales de Amor</h2>
-      <p class="mb-6 text-lg">Cada persona vive el amor de forma distinta. Por eso creo rituales personalizados según tu historia y tus emociones. Trabajo desde la energía limpia, la intención verdadera y el respeto absoluto por tu proceso.</p>
+      <p class="mb-6 text-lg">En el amor, cada alma tiene su herida y su esperanza. Por eso, mis rituales no son fórmulas vacías, sino actos sagrados pensados para ti. Cada uno busca liberar, sanar o atraer con intención profunda y luz verdadera. Juntas activaremos tu energía para que vuelvas a sentirte conectada con lo que mereces.</p>
       <div class="grid md:grid-cols-2 gap-6">
         <div class="bg-white p-6 rounded-lg shadow">
           <h3 class="text-xl font-semibold mb-2">💔 Recuperar una relación</h3>
@@ -89,24 +89,48 @@
           <h3 class="text-xl font-semibold mb-2">🌹 Amor propio y autoestima</h3>
           <p>Ideal si has salido de una ruptura o te sientes desconectada de ti misma. Te ayuda a reconectar contigo y cultivar amor propio desde adentro.</p>
         </div>
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-xl font-semibold mb-2">💬 Romper bloqueos con una persona</h3>
+          <p>Si hay alguien que te gusta pero no se decide o hay obstáculos emocionales, este ritual ayuda a desbloquear y armonizar la energía entre ambos.</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-xl font-semibold mb-2">🌬️ Limpieza energética de vínculos</h3>
+          <p>Para eliminar tensiones, resentimientos o influencias externas que estén afectando tu relación o bienestar emocional.</p>
+        </div>
+      </div>
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-xl font-semibold mb-2">💖 Atraer un nuevo amor sano</h3>
+          <p>Cuando estás preparada para volver a amar. Este ritual activa tu energía receptiva para atraer relaciones desde el respeto, el deseo y la estabilidad.</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-xl font-semibold mb-2">✂️ Cortar lazos con el pasado</h3>
+          <p>Si sientes que no puedes soltar a alguien o que arrastras un vínculo doloroso, este ritual te ayudará a liberarte con paz y cerrar ciclos.</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-xl font-semibold mb-2">🌹 Amor propio y autoestima</h3>
+          <p>Ideal si has salido de una ruptura o te sientes desconectada de ti misma. Te ayuda a reconectar contigo y cultivar amor propio desde adentro.</p>
+        </div>
       </div>
     </div>
   </section>
 
   <section id="testimonios" class="py-16 px-6 md:px-16">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-4xl font-bold mb-10 text-indigo-700">Testimonios</h2>
-      <blockquote class="italic text-lg mb-6">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”<br><span class="font-semibold">– Marta G. (Madrid)</span></blockquote>
-      <blockquote class="italic text-lg mb-6">“El ritual para soltar a mi ex fue muy sanador. Me sentí acompañada, comprendida y guiada en todo momento.”<br><span class="font-semibold">– Andrea L. (Valencia)</span></blockquote>
-      <blockquote class="italic text-lg mb-6">“Nunca había sentido tanta paz después de una lectura. Fue honesta, cariñosa y certera.”<br><span class="font-semibold">– Carmen R. (Barcelona)</span></blockquote>
-    </div>
-  </section>
+  <div class="max-w-4xl mx-auto text-center">
+    <h2 class="text-4xl font-bold mb-10 text-indigo-700">Testimonios</h2>
+    <blockquote class="italic text-lg mb-6">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”<br><span class="font-semibold">– Marta G. (Madrid)</span></blockquote>
+    <blockquote class="italic text-lg mb-6">“El ritual para soltar a mi ex fue muy sanador. Me sentí acompañada, comprendida y guiada en todo momento.”<br><span class="font-semibold">– Andrea L. (Valencia)</span></blockquote>
+    <blockquote class="italic text-lg mb-6">“Nunca había sentido tanta paz después de una lectura. Fue honesta, cariñosa y certera.”<br><span class="font-semibold">– Carmen R. (Barcelona)</span></blockquote>
+    <blockquote class="italic text-lg mb-6">“Pensé que era imposible volver a confiar en el amor, pero tras la consulta y el ritual empecé a sanar por dentro.”<br><span class="font-semibold">– Laura P. (Sevilla)</span></blockquote>
+    <blockquote class="italic text-lg mb-6">“Me sentí escuchada y comprendida. No fue solo tarot, fue una experiencia sanadora de verdad.”<br><span class="font-semibold">– Nuria F. (Bilbao)</span></blockquote>
+    <blockquote class="italic text-lg">“El enfoque de Luna es muy humano. Me ayudó a cortar con energías del pasado y a abrirme de nuevo a la vida.”<br><span class="font-semibold">– Julia M. (Alicante)</span></blockquote>
+  </div>
+</section>
 
   <section id="contacto" class="py-16 px-6 md:px-16 bg-indigo-50">
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-4xl font-bold mb-6 text-indigo-700">Contacto</h2>
       <p class="mb-4 text-lg">📱 WhatsApp: <a href="https://wa.me/34604458992" class="text-indigo-600 font-semibold">604 45 89 92</a></p>
-      <p class="mb-6">Respondo de lunes a sábado. Si no contesto de inmediato, te responderé en el mismo día.</p>
+      <p class="mb-6">Horario de atención: lunes a sábado de 10:00 a 20:30.Te responderé en el mismo día.</p>
       <a href="https://wa.me/34604458992" class="bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition hover:bg-indigo-800">Enviar mensaje por WhatsApp</a>
     </div>
   </section>
