--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </style>
 </head>
 <body class="font-[Quicksand] bg-white text-gray-800">
-  <header class="h-screen bg-cover bg-center text-white flex flex-col justify-center items-center text-center" style="background-image: url('https://images.unsplash.com/photo-1533616688419-b7a585564566?auto=format&fit=crop&w=1470&q=80');">
+  <header class="h-screen bg-indigo-100 text-gray-800 flex flex-col justify-center items-center text-center">
     <h1 class="text-6xl md:text-7xl font-bold drop-shadow-xl" style="font-family: 'Playfair Display', serif;">Tarot Luna</h1>
-    <p class="text-xl md:text-2xl mt-4 bg-white bg-opacity-80 text-gray-900 px-6 py-2 rounded shadow">Cuando el corazón busca respuestas, el alma sabe dónde mirar. Déjame ser tu guía en este camino de claridad, calma y luz.</p>
+    <p class="text-xl md:text-2xl mt-4 bg-white bg-opacity-90 px-6 py-2 rounded shadow max-w-xl">Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.</p>
     <a href="#contacto" class="mt-6 bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition">Solicita tu consulta</a>
   </header>
 
@@ -77,18 +77,7 @@
           <h3 class="text-xl font-semibold mb-2">💔 Recuperar una relación</h3>
           <p>Si hubo amor y aún hay conexión, este ritual puede ayudarte a abrir diálogo, sanar heridas y facilitar un reencuentro desde el alma.</p>
         </div>
-        <div class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-xl font-semibold mb-2">💖 Atraer un nuevo amor sano</h3>
-          <p>Cuando estás preparada para volver a amar. Este ritual activa tu energía receptiva para atraer relaciones desde el respeto, el deseo y la estabilidad.</p>
-        </div>
-        <div class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-xl font-semibold mb-2">✂️ Cortar lazos con el pasado</h3>
-          <p>Si sientes que no puedes soltar a alguien o que arrastras un vínculo doloroso, este ritual te ayudará a liberarte con paz y cerrar ciclos.</p>
-        </div>
-        <div class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-xl font-semibold mb-2">🌹 Amor propio y autoestima</h3>
-          <p>Ideal si has salido de una ruptura o te sientes desconectada de ti misma. Te ayuda a reconectar contigo y cultivar amor propio desde adentro.</p>
-        </div>
+        
         <div class="bg-white p-6 rounded-lg shadow">
           <h3 class="text-xl font-semibold mb-2">💬 Romper bloqueos con una persona</h3>
           <p>Si hay alguien que te gusta pero no se decide o hay obstáculos emocionales, este ritual ayuda a desbloquear y armonizar la energía entre ambos.</p>
