--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
   </style>
 </head>
 <body class="font-[Quicksand] bg-white text-gray-800">
-  <header class="h-screen bg-indigo-100 text-gray-800 flex flex-col justify-center items-center text-center">
-    <h1 class="text-6xl md:text-7xl font-bold drop-shadow-xl" style="font-family: 'Playfair Display', serif;">Tarot Luna</h1>
-    <p class="text-xl md:text-2xl mt-4 bg-white bg-opacity-90 px-6 py-2 rounded shadow max-w-xl">Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.</p>
-    <a href="#contacto" class="mt-6 bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition">Solicita tu consulta</a>
-  </header>
+  <header class="py-24 bg-indigo-100 text-center text-gray-800">
+  <div class="max-w-3xl mx-auto px-4">
+    <div class="flex justify-center mb-6">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-indigo-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M21 12.79A9 9 0 0112.21 3 7 7 0 0021 12.79z" />
+      </svg>
+    </div>
+    <h1 class="text-5xl md:text-6xl font-bold" style="font-family: 'Playfair Display', serif;">Tarot Luna</h1>
+    <p class="mt-6 text-xl md:text-2xl max-w-xl mx-auto leading-relaxed">Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.</p>
+    <a href="#contacto" class="mt-8 inline-block bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition">Solicita tu consulta</a>
+  </div>
+</header>
 
   <nav class="bg-white shadow sticky top-0 z-50">
     <div class="container mx-auto px-4 py-4 flex justify-center space-x-6 text-indigo-800 font-semibold">
@@ -69,39 +76,37 @@
   </section>
 
   <section id="rituales" class="py-16 px-6 md:px-16 bg-gray-50">
-    <div class="max-w-5xl mx-auto text-center">
-      <h2 class="text-4xl font-bold mb-10 text-indigo-700">Rituales de Amor</h2>
-      <p class="mb-6 text-lg">En el amor, cada alma tiene su herida y su esperanza. Por eso, mis rituales no son fórmulas vacías, sino actos sagrados pensados para ti. Cada uno busca liberar, sanar o atraer con intención profunda y luz verdadera. Juntas activaremos tu energía para que vuelvas a sentirte conectada con lo que mereces.</p>
-      <div class="grid md:grid-cols-2 gap-6">
-        <div class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-xl font-semibold mb-2">💔 Recuperar una relación</h3>
-          <p>Si hubo amor y aún hay conexión, este ritual puede ayudarte a abrir diálogo, sanar heridas y facilitar un reencuentro desde el alma.</p>
-        </div>
-        
-        <div class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-xl font-semibold mb-2">💬 Romper bloqueos con una persona</h3>
-          <p>Si hay alguien que te gusta pero no se decide o hay obstáculos emocionales, este ritual ayuda a desbloquear y armonizar la energía entre ambos.</p>
-        </div>
-        <div class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-xl font-semibold mb-2">🌬️ Limpieza energética de vínculos</h3>
-          <p>Para eliminar tensiones, resentimientos o influencias externas que estén afectando tu relación o bienestar emocional.</p>
-        </div>
+  <div class="max-w-6xl mx-auto text-center">
+    <h2 class="text-4xl font-bold mb-10 text-indigo-700">Rituales de Amor</h2>
+    <p class="mb-10 text-lg max-w-3xl mx-auto">Cada ritual es una intención, un camino abierto y un acto de amor propio. Están diseñados para acompañarte con respeto, energía limpia y conexión profunda con lo que verdaderamente necesitas.</p>
+    <div class="grid md:grid-cols-3 gap-8 text-left">
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold mb-2">💔 Recuperar una relación</h3>
+        <p>Reencuentro emocional con una persona con la que aún hay vínculos. Sanación y apertura desde el alma.</p>
       </div>
-        <div class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-xl font-semibold mb-2">💖 Atraer un nuevo amor sano</h3>
-          <p>Cuando estás preparada para volver a amar. Este ritual activa tu energía receptiva para atraer relaciones desde el respeto, el deseo y la estabilidad.</p>
-        </div>
-        <div class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-xl font-semibold mb-2">✂️ Cortar lazos con el pasado</h3>
-          <p>Si sientes que no puedes soltar a alguien o que arrastras un vínculo doloroso, este ritual te ayudará a liberarte con paz y cerrar ciclos.</p>
-        </div>
-        <div class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-xl font-semibold mb-2">🌹 Amor propio y autoestima</h3>
-          <p>Ideal si has salido de una ruptura o te sientes desconectada de ti misma. Te ayuda a reconectar contigo y cultivar amor propio desde adentro.</p>
-        </div>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold mb-2">💬 Romper bloqueos con alguien</h3>
+        <p>Cuando alguien importante parece distante o indeciso. Este ritual armoniza y desbloquea la conexión energética.</p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold mb-2">🌬️ Limpieza de lazos negativos</h3>
+        <p>Ideal para cortar con relaciones tóxicas o emociones que no te dejan avanzar. Libera y sana tu campo emocional.</p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold mb-2">💖 Atraer un nuevo amor sano</h3>
+        <p>Conecta con tu magnetismo interior. Este ritual potencia la apertura hacia relaciones equilibradas y auténticas.</p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold mb-2">✂️ Cerrar ciclos del pasado</h3>
+        <p>Para quienes sienten que aún cargan con historias que ya no les pertenecen. Cierra capítulos con paz y gratitud.</p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold mb-2">🌹 Amor propio y autoestima</h3>
+        <p>Te ayuda a reconectar contigo misma, recuperar tu valor y verte desde la compasión y el respeto que mereces.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="testimonios" class="py-16 px-6 md:px-16">
   <div class="max-w-4xl mx-auto text-center">
