--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       </svg>
     </div>
     <h1 class="text-5xl md:text-6xl font-bold" style="font-family: 'Playfair Display', serif;">Tarot Luna</h1>
-    <p class="mt-6 text-xl md:text-2xl max-w-xl mx-auto leading-relaxed">Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.</p>
+    <p class="mt-6 text-2xl md:text-3xl max-w-xl mx-auto leading-relaxed bg-white text-indigo-900 p-8 rounded-xl shadow-lg border-l-4 border-indigo-400 transition-opacity duration-1000 opacity-100">
+  Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.
+</p>
     <a href="#contacto" class="mt-8 inline-block bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition">Solicita tu consulta</a>
   </div>
 </header>
@@ -42,10 +44,12 @@
       <div class="flex flex-col md:flex-row items-center justify-center gap-8">
         <img src="22c16f98-dd4e-4deb-b762-bcb60c03f0d3.jpg" alt="Luna Tarotista" class="w-full max-w-sm rounded-lg shadow-md">
         <p class="text-lg leading-relaxed text-left max-w-xl">
-          Soy <strong>Luna</strong>, guía espiritual y tarotista especializada en el amor. Desde hace más de dos décadas acompaño a personas que necesitan comprender su presente y abrazar con confianza su futuro. Mi conexión con la energía y el alma humana comenzó desde niña, cuando descubrí que las cartas hablaban más allá de lo evidente.
-          <br><br>
-          Mi propósito es ayudarte a ver con claridad, a sanar vínculos y a reconectar contigo misma. Mis sesiones no son solo una lectura de tarot, son espacios de escucha profunda, orientación y transformación. Trabajo desde la calma, con empatía, intuición y una gran pasión por ayudarte a que vivas tu historia desde la verdad del corazón.
-        </p>
+  Me llamo <strong>Luna</strong> y desde hace más de 20 años acompaño a personas que buscan claridad en el amor. ¿Te preguntas si esa persona especial volverá? ¿Si siente lo mismo que tú? ¿Si vale la pena seguir esperando o soltar? ¿Qué energía hay entre vosotros?
+  <br><br>
+  Desde joven sentí que podía percibir más allá de las palabras. El tarot me encontró como una herramienta para poner en palabras lo que el alma ya sabe. No digo lo que quieres oír, sino lo que necesitas saber para avanzar, con cariño, sinceridad y sin juicios.
+  <br><br>
+  Estoy aquí para ayudarte a entender lo que sientes, lo que está pasando y lo que puedes hacer. Mis consultas son espacios donde te escucho con calma, y te entrego respuestas que te den paz y dirección. Porque mereces amar sin dudas y vivir con claridad.
+</p>
       </div>
     </div>
   </section>
