--- a/index.html
+++ b/index.html
@@ -136,5 +136,13 @@
   <footer class="bg-indigo-100 text-center text-sm py-6 text-gray-700">
     &copy; 2025 Tarot Luna. Todos los derechos reservados.
   </footer>
+<a href="https://wa.me/34604458992" target="_blank"
+   class="fixed bottom-4 right-4 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg z-50"
+   aria-label="WhatsApp">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+    <path d="M12.04 2C6.56 2 2 6.55 2 12c0 1.79.44 3.45 1.22 4.93L2 22l5.15-1.18A9.98 9.98 0 0012.04 22c5.48 0 10.04-4.55 10.04-10s-4.56-10-10.04-10zm.03 18.02c-1.53 0-3.01-.41-4.3-1.17l-.31-.18-3.06.7.65-2.99-.2-.33a8.007 8.007 0 1114.31-2.69 8.003 8.003 0 01-7.09 6.66z"/>
+    <path d="M16.17 14.27l-1.23-.6c-.16-.08-.34-.13-.52-.13-.25 0-.5.09-.68.27l-.57.57a6.98 6.98 0 01-3.11-3.11l.57-.57a.997.997 0 00.27-.68c0-.18-.05-.36-.13-.52l-.6-1.23a1 1 0 00-1.28-.49c-.71.3-1.25.84-1.55 1.55a2.96 2.96 0 000 2.64c.98 2.08 2.69 3.79 4.77 4.77a2.96 2.96 0 002.64 0c.71-.3 1.25-.84 1.55-1.55a1 1 0 00-.49-1.28z"/>
+  </svg>
+</a>
 </body>
 </html>
