--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   </style>
 </head>
 <body class="font-[Quicksand] bg-white text-gray-800">
-  <header class="py-24 bg-indigo-100 text-center text-gray-800">
-  <div class="max-w-3xl mx-auto px-4">
-    <div class="flex justify-center mb-6">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-indigo-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <header class="py-28 bg-gradient-to-b from-indigo-50 to-white text-center text-gray-800">
+  <div class="max-w-3xl mx-auto px-6">
+    <div class="flex justify-center mb-4">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-indigo-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M21 12.79A9 9 0 0112.21 3 7 7 0 0021 12.79z" />
       </svg>
     </div>
     <h1 class="text-5xl md:text-6xl font-bold" style="font-family: 'Playfair Display', serif;">Tarot Luna</h1>
-    <p class="mt-6 text-2xl md:text-3xl max-w-xl mx-auto leading-relaxed bg-white text-indigo-900 p-8 rounded-xl shadow-lg border-l-4 border-indigo-400 transition-opacity duration-1000 opacity-100">
-  Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.
-</p>
-    <a href="#contacto" class="mt-8 inline-block bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition">Solicita tu consulta</a>
+    <p class="mt-6 text-2xl md:text-3xl max-w-2xl mx-auto leading-relaxed text-indigo-900 font-medium bg-white bg-opacity-80 p-6 md:p-8 rounded-2xl shadow-md border border-indigo-300">
+      Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.
+    </p>
+    <a href="#contacto" class="mt-8 inline-block bg-indigo-600 hover:bg-indigo-700 text-white px-8 py-3 rounded-full font-semibold transition shadow">Solicita tu consulta</a>
   </div>
 </header>
 
