--- a/index.html
+++ b/index.html
@@ -132,7 +132,18 @@
       <a href="https://wa.me/34604458992" class="bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition hover:bg-indigo-800">Enviar mensaje por WhatsApp</a>
     </div>
   </section>
+
 
+<section id="reserva" class="py-16 px-6 md:px-16">
+  <div class="max-w-5xl mx-auto text-center">
+    <h2 class="text-4xl font-bold mb-6 text-indigo-700">Reserva tu consulta</h2>
+    <p class="text-lg mb-8 max-w-2xl mx-auto">Elige el día y la hora que mejor se adapte a ti. Tu espacio de claridad y guía te está esperando.</p>
+    <div class="w-full h-[700px]">
+      <iframe src="https://calendly.com/tarotluna" width="100%" height="100%" frameborder="0" scrolling="no" style="min-width:320px; border-radius: 1rem;"></iframe>
+    </div>
+  </div>
+</section>
+
   <footer class="bg-indigo-100 text-center text-sm py-6 text-gray-700">
     &copy; 2025 Tarot Luna. Todos los derechos reservados.
   </footer>
