--- a/index.html
+++ b/index.html
@@ -24,35 +24,41 @@
     <p class="mt-6 text-2xl md:text-3xl max-w-2xl mx-auto leading-relaxed text-indigo-900 font-medium bg-white bg-opacity-80 p-6 md:p-8 rounded-2xl shadow-md border border-indigo-300">
       Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.
     </p>
-    <a href="#contacto" class="mt-8 inline-block bg-indigo-600 hover:bg-indigo-700 text-white px-8 py-3 rounded-full font-semibold transition shadow">Solicita tu consulta</a>
+    <p class="mt-6 text-base text-indigo-700 font-medium italic">Estoy aquí para acompañarte cuando lo necesites. Tu bienestar es mi prioridad.</p>
   </div>
 </header>
 
   <nav class="bg-white shadow sticky top-0 z-50">
-    <div class="container mx-auto px-4 py-4 flex justify-center space-x-6 text-indigo-800 font-semibold">
-      <a href="#sobre-mi" class="hover:underline">Sobre mí</a>
-      <a href="#consultas" class="hover:underline">Consultas</a>
-      <a href="#rituales" class="hover:underline">Rituales</a>
-      <a href="#testimonios" class="hover:underline">Testimonios</a>
-      <a href="#contacto" class="hover:underline">Contacto</a>
-    </div>
-  </nav>
+  <div class="container mx-auto px-4 py-4 flex flex-wrap items-center justify-center gap-4 text-indigo-800 font-semibold text-sm md:text-base">
+    <a href="#sobre-mi" class="hover:underline">Sobre mí</a>
+    <a href="#consultas" class="hover:underline">Consultas</a>
+    <a href="#rituales" class="hover:underline">Rituales</a>
+    <a href="#testimonios" class="hover:underline">Testimonios</a>
+    <a href="#reserva" class="hover:underline">Reserva</a>
+    <a href="#contacto" class="hover:underline">Contacto</a>
+  </div>
+</nav>
 
-  <section id="sobre-mi" class="py-16 px-6 md:px-16 bg-indigo-50">
-    <div class="max-w-5xl mx-auto text-center">
-      <h2 class="text-4xl font-bold mb-6 text-indigo-700">Sobre mí</h2>
-      <div class="flex flex-col md:flex-row items-center justify-center gap-8">
-        <img src="22c16f98-dd4e-4deb-b762-bcb60c03f0d3.jpg" alt="Luna Tarotista" class="w-full max-w-sm rounded-lg shadow-md">
-        <p class="text-lg leading-relaxed text-left max-w-xl">
-  Me llamo <strong>Luna</strong> y desde hace más de 20 años acompaño a personas que buscan claridad en el amor. ¿Te preguntas si esa persona especial volverá? ¿Si siente lo mismo que tú? ¿Si vale la pena seguir esperando o soltar? ¿Qué energía hay entre vosotros?
-  <br><br>
-  Desde joven sentí que podía percibir más allá de las palabras. El tarot me encontró como una herramienta para poner en palabras lo que el alma ya sabe. No digo lo que quieres oír, sino lo que necesitas saber para avanzar, con cariño, sinceridad y sin juicios.
-  <br><br>
-  Estoy aquí para ayudarte a entender lo que sientes, lo que está pasando y lo que puedes hacer. Mis consultas son espacios donde te escucho con calma, y te entrego respuestas que te den paz y dirección. Porque mereces amar sin dudas y vivir con claridad.
-</p>
+  <section id="sobre-mi" class="py-20 px-6 md:px-16 bg-gradient-to-b from-white to-indigo-50">
+  <div class="max-w-6xl mx-auto">
+    <h2 class="text-4xl font-bold text-center text-indigo-700 mb-12">Mi camino, tu guía</h2>
+    <div class="flex flex-col md:flex-row items-center justify-center gap-10 bg-white shadow-xl p-10 rounded-3xl">
+      <img src="22c16f98-dd4e-4deb-b762-bcb60c03f0d3.jpg" alt="Luna Tarotista" class="w-full max-w-sm rounded-2xl shadow-md">
+      <div class="text-lg leading-relaxed text-gray-800 max-w-xl">
+        <p class="mb-4">
+          Me llamo <strong>Luna</strong> y desde hace más de 20 años acompaño a personas que buscan claridad en el amor.
+          ¿Te preguntas si esa persona especial volverá? ¿Si siente lo mismo que tú? ¿Si vale la pena seguir esperando o soltar? ¿Qué energía hay entre vosotros?
+        </p>
+        <p class="mb-4">
+          Desde joven sentí que podía percibir más allá de las palabras. El tarot me encontró como una herramienta para poner en palabras lo que el alma ya sabe. No digo lo que quieres oír, sino lo que necesitas saber para avanzar, con cariño, sinceridad y sin juicios.
+        </p>
+        <p>
+          Estoy aquí para ayudarte a entender lo que sientes, lo que está pasando y lo que puedes hacer. Mis consultas son espacios donde te escucho con calma, y te entrego respuestas que te den paz y dirección. Porque mereces amar sin dudas y vivir con claridad.
+        </p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="consultas" class="py-16 px-6 md:px-16">
     <div class="max-w-5xl mx-auto text-center">
@@ -124,15 +130,7 @@
   </div>
 </section>
 
-  <section id="contacto" class="py-16 px-6 md:px-16 bg-indigo-50">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-4xl font-bold mb-6 text-indigo-700">Contacto</h2>
-      <p class="mb-4 text-lg">📱 WhatsApp: <a href="https://wa.me/34604458992" class="text-indigo-600 font-semibold">604 45 89 92</a></p>
-      <p class="mb-6">Horario de atención: lunes a sábado de 10:00 a 20:30.Te responderé en el mismo día.</p>
-      <a href="https://wa.me/34604458992" class="bg-indigo-700 text-white px-6 py-3 rounded-full font-semibold transition hover:bg-indigo-800">Enviar mensaje por WhatsApp</a>
-    </div>
-  </section>
-
+  
 
 <section id="reserva" class="py-16 px-6 md:px-16">
   <div class="max-w-5xl mx-auto text-center">
@@ -144,6 +142,7 @@
   </div>
 </section>
 
+
   <footer class="bg-indigo-100 text-center text-sm py-6 text-gray-700">
     &copy; 2025 Tarot Luna. Todos los derechos reservados.
   </footer>
