--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p class="mt-6 text-2xl md:text-3xl max-w-2xl mx-auto leading-relaxed text-indigo-900 font-medium bg-white bg-opacity-80 p-6 md:p-8 rounded-2xl shadow-md border border-indigo-300">
       Hay momentos en los que necesitamos luz. Estoy aquí para ayudarte a encontrarla.
     </p>
-    <p class="mt-6 text-base text-indigo-700 font-medium italic">Estoy aquí para acompañarte cuando lo necesites. Tu bienestar es mi prioridad.</p>
+    <p class="mt-6 text-base text-indigo-700 font-medium italic">La verdad que mereces saber sin rodeos</p>
   </div>
 </header>
 
@@ -41,7 +41,7 @@
 
   <section id="sobre-mi" class="py-20 px-6 md:px-16 bg-gradient-to-b from-white to-indigo-50">
   <div class="max-w-6xl mx-auto">
-    <h2 class="text-4xl font-bold text-center text-indigo-700 mb-12">Mi camino, tu guía</h2>
+    <h2 class="text-4xl font-bold text-center text-indigo-700 mb-12">¿Quién soy?</h2>
     <div class="flex flex-col md:flex-row items-center justify-center gap-10 bg-white shadow-xl p-10 rounded-3xl">
       <img src="22c16f98-dd4e-4deb-b762-bcb60c03f0d3.jpg" alt="Luna Tarotista" class="w-full max-w-sm rounded-2xl shadow-md">
       <div class="text-lg leading-relaxed text-gray-800 max-w-xl">
