--- a/index.html
+++ b/index.html
@@ -118,15 +118,35 @@
   </div>
 </section>
 
-  <section id="testimonios" class="py-16 px-6 md:px-16">
-  <div class="max-w-4xl mx-auto text-center">
+  <section id="testimonios" class="py-20 px-6 md:px-16 bg-indigo-50">
+  <div class="max-w-6xl mx-auto text-center">
     <h2 class="text-4xl font-bold mb-10 text-indigo-700">Testimonios</h2>
-    <blockquote class="italic text-lg mb-6">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”<br><span class="font-semibold">– Marta G. (Madrid)</span></blockquote>
-    <blockquote class="italic text-lg mb-6">“El ritual para soltar a mi ex fue muy sanador. Me sentí acompañada, comprendida y guiada en todo momento.”<br><span class="font-semibold">– Andrea L. (Valencia)</span></blockquote>
-    <blockquote class="italic text-lg mb-6">“Nunca había sentido tanta paz después de una lectura. Fue honesta, cariñosa y certera.”<br><span class="font-semibold">– Carmen R. (Barcelona)</span></blockquote>
-    <blockquote class="italic text-lg mb-6">“Pensé que era imposible volver a confiar en el amor, pero tras la consulta y el ritual empecé a sanar por dentro.”<br><span class="font-semibold">– Laura P. (Sevilla)</span></blockquote>
-    <blockquote class="italic text-lg mb-6">“Me sentí escuchada y comprendida. No fue solo tarot, fue una experiencia sanadora de verdad.”<br><span class="font-semibold">– Nuria F. (Bilbao)</span></blockquote>
-    <blockquote class="italic text-lg">“El enfoque de Luna es muy humano. Me ayudó a cortar con energías del pasado y a abrirme de nuevo a la vida.”<br><span class="font-semibold">– Julia M. (Alicante)</span></blockquote>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+      <div class="bg-white p-6 rounded-xl shadow-md text-left">
+        <p class="italic">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”</p>
+        <p class="mt-4 font-semibold text-right">– Marta G. (Madrid)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md text-left">
+        <p class="italic">“El ritual para soltar a mi ex fue muy sanador. Me sentí acompañada, comprendida y guiada en todo momento.”</p>
+        <p class="mt-4 font-semibold text-right">– Andrea L. (Valencia)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md text-left">
+        <p class="italic">“Nunca había sentido tanta paz después de una lectura. Fue honesta, cariñosa y certera.”</p>
+        <p class="mt-4 font-semibold text-right">– Carmen R. (Barcelona)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md text-left">
+        <p class="italic">“Pensé que era imposible volver a confiar en el amor, pero tras la consulta y el ritual empecé a sanar por dentro.”</p>
+        <p class="mt-4 font-semibold text-right">– Laura P. (Sevilla)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md text-left">
+        <p class="italic">“Me sentí escuchada y comprendida. No fue solo tarot, fue una experiencia sanadora de verdad.”</p>
+        <p class="mt-4 font-semibold text-right">– Nuria F. (Bilbao)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md text-left">
+        <p class="italic">“El enfoque de Luna es muy humano. Me ayudó a cortar con energías del pasado y a abrirme de nuevo a la vida.”</p>
+        <p class="mt-4 font-semibold text-right">– Julia M. (Alicante)</p>
+      </div>
+    </div>
   </div>
 </section>
 
