--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
   </div>
 </section>
 
-  <section id="testimonios" class="py-20 px-6 md:px-16 bg-indigo-50">
+ <section id="testimonios" class="py-20 px-6 md:px-16 bg-indigo-50">
   <div class="max-w-3xl mx-auto text-center">
     <h2 class="text-4xl font-bold mb-10 text-indigo-700">Testimonios</h2>
     <div class="relative">
-      <div id="carousel" class="flex transition-transform duration-500 ease-in-out overflow-hidden rounded-xl shadow-lg">
+      <div id="carousel" class="flex transition-transform duration-500 ease-in-out rounded-xl shadow-lg w-full" style="width: 100%; overflow-x: hidden;">
         <div class="min-w-full p-6 bg-white text-left">
           <p class="italic text-lg">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”</p>
           <p class="mt-4 font-semibold text-right">– Marta G. (Madrid)</p>
