--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <div class="max-w-3xl mx-auto text-center">
     <h2 class="text-4xl font-bold mb-10 text-indigo-700">Testimonios</h2>
     <div class="relative">
-      <div id="carousel" class="flex transition-transform duration-500 ease-in-out rounded-xl shadow-lg w-full" style="width: 100%; overflow-x: hidden;">
+      <div id="carousel" class="flex transition-transform duration-500 ease-in-out rounded-xl shadow-lg w-full" style="overflow: hidden; width: 100%; display: flex;">
         <div class="min-w-full p-6 bg-white text-left">
           <p class="italic text-lg">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”</p>
           <p class="mt-4 font-semibold text-right">– Marta G. (Madrid)</p>
