--- a/index.html
+++ b/index.html
@@ -119,64 +119,36 @@
 </section>
 
  <section id="testimonios" class="py-20 px-6 md:px-16 bg-indigo-50">
-  <div class="max-w-3xl mx-auto text-center">
-    <h2 class="text-4xl font-bold mb-10 text-indigo-700">Testimonios</h2>
-    <div class="relative">
-      <div id="carousel" class="flex transition-transform duration-500 ease-in-out rounded-xl shadow-lg w-full" style="overflow: hidden; width: 100%; display: flex;">
-        <div class="min-w-full p-6 bg-white text-left">
-          <p class="italic text-lg">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”</p>
-          <p class="mt-4 font-semibold text-right">– Marta G. (Madrid)</p>
-        </div>
-        <div class="min-w-full p-6 bg-white text-left">
-          <p class="italic text-lg">“El ritual para soltar a mi ex fue muy sanador. Me sentí acompañada, comprendida y guiada en todo momento.”</p>
-          <p class="mt-4 font-semibold text-right">– Andrea L. (Valencia)</p>
-        </div>
-        <div class="min-w-full p-6 bg-white text-left">
-          <p class="italic text-lg">“Nunca había sentido tanta paz después de una lectura. Fue honesta, cariñosa y certera.”</p>
-          <p class="mt-4 font-semibold text-right">– Carmen R. (Barcelona)</p>
-        </div>
-        <div class="min-w-full p-6 bg-white text-left">
-          <p class="italic text-lg">“Pensé que era imposible volver a confiar en el amor, pero tras la consulta y el ritual empecé a sanar por dentro.”</p>
-          <p class="mt-4 font-semibold text-right">– Laura P. (Sevilla)</p>
-        </div>
-        <div class="min-w-full p-6 bg-white text-left">
-          <p class="italic text-lg">“Me sentí escuchada y comprendida. No fue solo tarot, fue una experiencia sanadora de verdad.”</p>
-          <p class="mt-4 font-semibold text-right">– Nuria F. (Bilbao)</p>
-        </div>
-        <div class="min-w-full p-6 bg-white text-left">
-          <p class="italic text-lg">“El enfoque de Luna es muy humano. Me ayudó a cortar con energías del pasado y a abrirme de nuevo a la vida.”</p>
-          <p class="mt-4 font-semibold text-right">– Julia M. (Alicante)</p>
-        </div>
-      </div>
-      <div class="flex justify-center mt-6 space-x-4">
-        <button onclick="moveSlide(-1)" class="bg-indigo-500 text-white px-4 py-2 rounded-full shadow hover:bg-indigo-600">⟨</button>
-        <button onclick="moveSlide(1)" class="bg-indigo-500 text-white px-4 py-2 rounded-full shadow hover:bg-indigo-600">⟩</button>
-      </div>
+  <div class="max-w-4xl mx-auto text-center">
+    <h2 class="text-4xl font-bold mb-12 text-indigo-700">Testimonios</h2>
+    <div class="space-y-10">
+      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
+        <p class="text-lg italic">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”</p>
+        <footer class="mt-4 text-right font-semibold text-indigo-700">– Marta G. (Madrid)</footer>
+      </blockquote>
+      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
+        <p class="text-lg italic">“El ritual para soltar a mi ex fue muy sanador. Me sentí acompañada, comprendida y guiada en todo momento.”</p>
+        <footer class="mt-4 text-right font-semibold text-indigo-700">– Andrea L. (Valencia)</footer>
+      </blockquote>
+      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
+        <p class="text-lg italic">“Nunca había sentido tanta paz después de una lectura. Fue honesta, cariñosa y certera.”</p>
+        <footer class="mt-4 text-right font-semibold text-indigo-700">– Carmen R. (Barcelona)</footer>
+      </blockquote>
+      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
+        <p class="text-lg italic">“Pensé que era imposible volver a confiar en el amor, pero tras la consulta y el ritual empecé a sanar por dentro.”</p>
+        <footer class="mt-4 text-right font-semibold text-indigo-700">– Laura P. (Sevilla)</footer>
+      </blockquote>
+      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
+        <p class="text-lg italic">“Me sentí escuchada y comprendida. No fue solo tarot, fue una experiencia sanadora de verdad.”</p>
+        <footer class="mt-4 text-right font-semibold text-indigo-700">– Nuria F. (Bilbao)</footer>
+      </blockquote>
+      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
+        <p class="text-lg italic">“El enfoque de Luna es muy humano. Me ayudó a cortar con energías del pasado y a abrirme de nuevo a la vida.”</p>
+        <footer class="mt-4 text-right font-semibold text-indigo-700">– Julia M. (Alicante)</footer>
+      </blockquote>
     </div>
   </div>
-  <script>
-  let currentIndex = 0;
-  const carousel = document.getElementById('carousel');
-  const totalSlides = carousel.children.length;
-
-  function moveSlide(step) {
-    currentIndex = (currentIndex + step + totalSlides) % totalSlides;
-    updateCarousel();
-  }
-
-  function updateCarousel() {
-    carousel.style.transform = `translateX(-${currentIndex * 100}%)`;
-  }
-
-  function autoSlide() {
-    moveSlide(1);
-  }
-
-  setInterval(autoSlide, 5000); // Cambia de testimonio cada 5 segundos
-</script>
 </section>
-
-  
 
 <section id="reserva" class="py-16 px-6 md:px-16">
   <div class="max-w-5xl mx-auto text-center">
